tests/fixtures/fail/returned_borrow_missing_region.sc
let bad(left: borrow(i32), right: borrow(i32)): borrow(i32) = { borrow(left) }
let main(): i32 = { 42 }
